--- a/internal/pkg/config/config.yaml
+++ b/internal/pkg/config/config.yaml
@@ -1,9 +1,9 @@
 db:
-  hostname: "5432"
-  database: "5432"
+  hostname: "localhost"
+  database: "Orders"
   port: "5432"
-  username: "5432"
-  password: "5432"
+  username: 
+  password: 
 
 server:
-  port: "5432"
+  port: "8001"
